# altex

./: .gitignore  LICENSE  README.md  pyproject.toml
resume_builder/: __init__.py  cli.py  extract.py  groq_client.py  parse.py  render.py
resume_builder/templates/: resume.tex.j2
samples/: sample_input.txt  sample_parsed.json  sample_resume.tex
